--- a/students/templates/addtopic.html
+++ b/students/templates/addtopic.html
@@ -1,14 +1,14 @@
 {% extends 'base.html' %}
-{% block title%}Add Course {% endblock %}
+{% block title%}Add Topic {% endblock %}
 {% block content %}
-<h1>Add Course</h1>
+<h1>Add Topic</h1>
 <form action="." method="post">
     {% csrf_token %}
     <table>
     {{ form }}
     </table>
     <p/>
-    <input type="submit" value="Add Course"/>
+    <input type="submit" value="Add Topic"/>
     <p/>
     <h4>{{message}}</h4>
 </form>
