--- a/students/templates/base.html
+++ b/students/templates/base.html
@@ -5,6 +5,8 @@
     <title>{% block title %} {% endblock %}</title>
     {% load static %}
     <link rel="stylesheet"  href="{% static 'styles.css'%}"/>
+    <script src="{% static  'jquery.js'%}"></script>
+
 </head>
 <body>
 <div class="banner">Students Application</div>
